--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-sticky": "^6.0.3"
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
