--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dropzone": "^11.0.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-simple-image-slider": "^1.0.3",
     "react-sticky": "^6.0.3"
   },
   "scripts": {
