--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-simple-image-slider": "^1.0.3",
-    "react-sticky": "^6.0.3"
+    "react-sticky": "^6.0.3",
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
