--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "3.4.1",
     "react-simple-image-slider": "^1.0.3",
     "react-sticky": "^6.0.3",
+    "simple-peer": "^9.7.2",
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
