--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-credit-cards": "^0.8.2",
     "react-datetime-picker": "^3.0.2",
     "react-dom": "^16.13.1",
+    "react-draggable": "^4.4.2",
     "react-dropzone": "^11.0.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
